--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -22,20 +22,15 @@ $color-comment-border: $zon_light_grey
 		border-top-width: 1px
 
 	&--wrapped
-		overflow: hidden
-		position: relative
 		cursor: pointer
-		max-height: remify(240px)
-
-		&:before
-			+background-image(linear-gradient(0deg, rgba($white, 1) 1.5em, rgba($white, 0) 100%))
-			content: ""
-			position: absolute
-			left: 0
-			right: 0
-			bottom: 0
-			height: remify(100px)
-			z-index: 1
+		.comment__body
+			overflow: hidden
+			margin-bottom: 0
+			max-height: 7em // em-tentional :D
+		.comment__reactions
+			display: none
+		.comment-overlay
+			display: block
 
 	&__ad
 		background: $zon_lighter_grey
@@ -125,6 +120,7 @@ $color-comment-border: $zon_light_grey
 		padding-left: remify(48px)
 		padding-right: $page-padding
 		border-top: 1px solid $color-comment-border
+		position: relative
 
 		+respond-min($break-phablet-min)
 			box-shadow: none
@@ -174,6 +170,39 @@ $color-comment-border: $zon_light_grey
 	border-top-width: 1px
 	&:before
 		border-bottom-color: $color-comment-border
+
+
+// comment thread collapsed
+.comment-overlay
+	+background-image(linear-gradient(0deg, rgba($white, 1) 3em, rgba($white, 0) 100%))
+	display: none
+	position: absolute
+	left: 0
+	right: 0
+	bottom: 0
+	height: 80%
+	padding-left: remify(48px)
+	+respond-min($break-phablet-min)
+		padding-left: remify(80px)
+
+	&__wrap
+		position: absolute
+		bottom: remify(20px)
+	&__count
+		+border-radius(1em)
+		background: $zon_dark_grey
+		color: $zon_lighter_grey
+		font-size: remify(11px)
+		background-color: $zon-trout
+		padding: remify(3px 12px)
+		margin-right: remify(12px)
+	&__cta
+		color: $zon_grey
+		font-size: remify(15px)
+		letter-spacing: $zon-letter-spacing-s
+		border-bottom: 1px solid $zon_light_grey
+		+transition-property(border-bottom-color, color)
+		+transition-duration(.2s)
 
 
 // icons
