ZON-1960: Move adc files and delete oldschool

--- a/src/zeit/web/core/templates/inc/marketing.html
+++ b/src/zeit/web/core/templates/inc/marketing.html
@@ -3,5 +3,5 @@
 	{% include "zeit.web.core:templates/inc/tracking/ivw_ver2.html" %}
 {% endif %}
 {% if view.enable_third_party_modules and view.enable_iqd %}
-    {% include "zeit.web.core:templates/inc/ads/%s/body.html" % view.ad_delivery_type ignore missing %}
+    {% include "zeit.web.core:templates/inc/ads/body.html" ignore missing %}
 {% endif %}
