--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -86,7 +86,7 @@
         <script id="ivw-v2" type="text/javascript" src="https://script.ioam.de/iam.js"></script>
     {% endif %}
     {% if view.enable_third_party_modules and view.enable_iqd %}
-        {% include "zeit.web.core:templates/inc/ads/%s/head.html" % view.ad_delivery_type ignore missing %}
+        {% include "zeit.web.core:templates/inc/ads/head.html" ignore missing %}
         {%- block content_ad_script -%}{%- endblock -%}
     {% endif %}
     {% if view.is_dev_environment %}
@@ -148,7 +148,7 @@
             {% endprofile %}
         </div>
     </div>
-    {% include "zeit.web.core:templates/inc/ads/%s/finalize.html" % view.ad_delivery_type ignore missing %}
+    {% include "zeit.web.core:templates/inc/ads/finalize.html" ignore missing %}
     {% include "zeit.web.core:templates/inc/tracking/webtrekk.html" ignore missing %}
     {% include "zeit.web.core:templates/inc/inline_js/app_wrapper.html" ignore missing %}
     {% block meetrics %}
