--- a/src/zeit/web/site/templates/inc/module/headerimage.html
+++ b/src/zeit/web/site/templates/inc/module/headerimage.html
@@ -1,6 +1,6 @@
 <header class="header-image{% if module.visible_mobile == False %} mobile-hidden{% endif %}"{% if module %} data-block-type="{{ module.type | hide_none }}"{% endif %} data-unique-id="{{ module.uniqueId }}" data-meetrics="{{ area.kind }}">
     {# get the image directy from the supplied image group #}
-    {% set image = module | get_image(default='panorama') %}
+    {% set image = get_image(module, default='panorama') %}
     {# we need to explecitly pass the layout aka block class name #}
     {% set module_layout = "header-image" %}
     {% include "zeit.web.site:templates/inc/module/headerimage_image.tpl" ignore missing %}
