--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -67,7 +67,7 @@
     {# Modernizr -#}
     <script src="{{ request.asset_url('js/vendor/modernizr-custom.js') }}"></script>
     {# SVG4everybody TODO: replace Grunticon completely, check IE8 Fallback -#}
-    <script src="{{ request.asset_url('js/vendor/svg4everybody.legacy.min.js') }}"></script>
+    <script src="{{ request.asset_url('js/vendor/svg4everybody.legacy.js') }}"></script>
     <script>svg4everybody();</script>
     {# Grunticon SVG -#}
     <script>
