--- a/sass/web.site/modules/article/_infografix.sass
+++ b/sass/web.site/modules/article/_infografix.sass
@@ -9,17 +9,6 @@
 		margin-left: auto
 		margin-right: auto
 
-// vertical space
-.x-spacing
-	margin-top: $vertical-space
-	margin-bottom: $vertical-space
-	&--paragraph
-		margin-top: .6em
-		margin-bottom: .6em
-	&--large
-		margin-top: $vertical-space * 2
-		margin-bottom: $vertical-space * 2
-
 // responsive fullwidth
 .x-fullwidth
 	margin-left: -$page-padding
@@ -57,7 +46,8 @@
 .x-subheadline
 	border-bottom: 1px solid $color-border
 	font-size: em(18px)
-	margin: 0 0 .5rem
+	margin-bottom: .5rem
+	margin-top: .5rem
 	padding-bottom: .5rem
 	+respond-min($break-desktop-min)
 		font-size: em(20px)
@@ -84,10 +74,25 @@
 	+clearfix
 	color: $zon_grey
 	font-size: em(14px)
-	margin: .5rem 0 0
+	margin-bottom: .5rem
+	margin-top: .5rem
 
 .x-footer
 	border-top: 1px solid $color-border
 	padding-top: .5rem
 	&__copyright
 		float: right
+
+// vertical space
+.x-spacing
+	margin-top: $vertical-space
+	margin-bottom: $vertical-space
+	&--paragraph
+		margin-top: .6em
+		margin-bottom: .6em
+	&--large
+		margin-top: $vertical-space * 2
+		margin-bottom: $vertical-space * 2
+
+.x-picturefill img
+	max-width: 100%
