--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -93,7 +93,7 @@
     <script src="//localhost:35729/livereload.js"></script>
     {% endif %}
     {% if view.has_card_stack %}
-        <esi:include src="http://www.zeit.de/cardstack-backend/stacks/esi/head" onerror="continue" />
+        <esi:include src="http://www.zeit.de/cardstack-backend/stacks/esi/head?shareUrl={{ request.url }}" onerror="continue" />
     {% endif %}
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" data-page-type="{{ view.type }}"  data-unique-id="{{ view.context.uniqueId }}" data-adDeliveryType="{{ view.ad_delivery_type }}">
@@ -173,7 +173,7 @@
     <!--end: vgwort-->
     {% endif %}
     {% if view.has_card_stack %}
-        <esi:include src="http://www.zeit.de/cardstack-backend/stacks/esi/scripts" onerror="continue" />
+        <esi:include src="http://www.zeit.de/cardstack-backend/stacks/esi/scripts?shareUrl={{ request.url }}" onerror="continue" />
     {% endif %}
 </body>
 </html>
