ZON-2053: replace $zon-darker-grey w/ $zon-charcoal
in the whole project, and remove $zon-darker-grey afterwards

--- a/sass/web.site/modules/comments/_comment-preferences.sass
+++ b/sass/web.site/modules/comments/_comment-preferences.sass
@@ -30,7 +30,7 @@ $prefs-link-color: $zon_grey
 		& > svg
 			color: #909090
 		&--active
-			+link-colors($zon-darker-grey, $zon-darker-grey, $zon-darker-grey, $zon-darker-grey, $zon-darker-grey)
+			+link-colors($zon-charcoal, $zon-charcoal, $zon-charcoal, $zon-charcoal, $zon-charcoal)
 			& > svg
 				color: inherit
 	&__text
