--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -25,7 +25,7 @@ $color-comment-border: $zon_light_grey
 		cursor: pointer
 		&:hover
 			.comment-overlay__count
-				background-color: $zon_mid_grey
+				background-color: $zon-charcoal
 			.comment-overlay__cta
 				color: $zon_dark_grey
 				border-bottom: 1px solid $zon_mid_grey
