--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -31,9 +31,7 @@
 %teaser-small-media-verlag
 	+respond-max($break-phablet-min)
 		display: block
-		margin-left: 0
-		margin-right: 0
-		margin-top: 0
+		margin: 0 0 remify(20px)
 
 %teaser-small-container
 	vertical-align: top
@@ -129,12 +127,4 @@
 		border-bottom: 1px solid $zon_light_grey
 
 %teaser-label
-	color: $zon_mid_grey
-	font-size: remify(10px)
-	letter-spacing: remify(1px)
-	text-transform: uppercase
-	padding: remify(6px) 0
-	display: block
-	text-align: right
-	+respond-min($break-tablet-min)
-		text-align: left
+	@extend %ad-label
