ZON-1592: Rename Verlagsangebots teaser

--- a/sass/web.site/modules/teaser/_teaser-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-small.sass
@@ -34,5 +34,5 @@
 		@extend %teaser-label
 		+respond-min($break-phablet-min)
 			text-align: left
-	&--verlag &__media
-		@extend %teaser-small-media-verlag
+	&--inhouse &__media
+		@extend %teaser-small-media-inhouse !optional
