--- a/sass/web.site/modules/teaser/_teaser-small-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-minor.sass
@@ -41,5 +41,5 @@
 		@extend %teaser-label
 		+respond-min-max($break-phablet-min, $break-areas)
 			text-align: left
-	&--verlag &__media
-		@extend %teaser-small-media-verlag
+	&--inhouse &__media
+		@extend %teaser-small-media-inhouse !optional
